# deepin-ocr

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.zh_CN.md  build3rdparty.sh  com.deepin.Ocr.service  deepin-ocr.desktop  deepin-ocr.pro  install_dconfig.cmake  linglong.yaml  resource.qrc  translations.pri
.reuse/: dep5
.tx/: config  transifex.yaml  ts2desktop
assets/: icon_tips.dci
assets/configs/: deepin-ocr.common.json
debian/: changelog  control  copyright  rules
llpatches/: linglongDbus.patch
src/: CMakeLists.txt  frame.cpp  frame.h  loadingwidget.cpp  loadingwidget.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  ocrapplication.cpp  ocrapplication.h  resulttextview.cpp  resulttextview.h  textloadwidget.cpp  textloadwidget.h
src/engine/: OCREngine.cpp  OCREngine.h
src/paddleocr-ncnn/: details.cpp  details.h  paddleocr.cpp  paddleocr.h  postprocess_op.cpp  postprocess_op.h  utility.cpp  utility.h
src/service/: dbusocr_adaptor.cpp  dbusocr_adaptor.h  ocrinterface.cpp  ocrinterface.h
src/tessocrutils/: tessocrutils.cpp  tessocrutils.h
src/util/: log.cpp  log.h
src/utils/: dconfigmanager.cpp  dconfigmanager.h
src/utils/private/: dconfigmanager_p.h
src/view/: imageview.cpp  imageview.h
tests/: test-prj-running.sh  test_dbus_service.cpp  test_mainwindow.cpp  test_qtestmain.cpp  test_resulttextview.cpp
tests/tessocrutils/: test_tessocrutils.cpp
translations/: deepin-ocr.ts  deepin-ocr_ady.ts  deepin-ocr_af.ts  deepin-ocr_am_ET.ts  deepin-ocr_ar.ts  deepin-ocr_ast.ts  deepin-ocr_az.ts  deepin-ocr_bg.ts  deepin-ocr_bn.ts  deepin-ocr_bo.ts  deepin-ocr_bqi.ts  deepin-ocr_br.ts  deepin-ocr_ca.ts  deepin-ocr_cs.ts  deepin-ocr_da.ts  deepin-ocr_de.ts  deepin-ocr_el.ts  deepin-ocr_en_AU.ts  deepin-ocr_en_GB.ts  deepin-ocr_en_US.ts  deepin-ocr_eo.ts  deepin-ocr_es.ts  deepin-ocr_es_419.ts  deepin-ocr_et.ts  deepin-ocr_eu.ts  deepin-ocr_fa.ts  deepin-ocr_fi.ts  deepin-ocr_fil.ts  deepin-ocr_fr.ts  deepin-ocr_gl_ES.ts  deepin-ocr_he.ts  deepin-ocr_hi_IN.ts  deepin-ocr_hr.ts  deepin-ocr_hu.ts  deepin-ocr_hy.ts  deepin-ocr_id.ts  deepin-ocr_it.ts  deepin-ocr_ja.ts  deepin-ocr_ka.ts  deepin-ocr_km_KH.ts  (+41 more)
